# bazel-lib

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  constants.bzl  terraform.tfvars.json  terraform.tfvars.json.example  tf_variables.tf
.github/workflows/: pr.yaml
libs/py/gcp/: BUILD.bazel  api.py  cloudrun.py  cloudscheduler.py  cloudtasks.py  datastore.py  tests.py
libs/py/helpers/: BUILD.bazel  __init__.py  exceptions.py  tests.py
libs/py/settings/: BUILD.bazel  __init__.py  tests.py  tf_vars.py  tfvars.py
libs/py/tf/: BUILD.bazel  apply.py  secrets.py  state.py  test_apply.py  test_secrets.py  test_state.py  test_tfvars.py  tests.py  tf_variables.py  tfvars.py
libs/py/utils/: BUILD.bazel  logger.py  test_logger.py  tests.py
scripts/deploy/: BUILD.bazel  change_yaml.py  cloudrun.py  push_commit.py
scripts/helm/apps/: BUILD.bazel  README.md  apps.bzl  init.py
scripts/init/: BUILD.bazel  README.md  poststeps.py  prepare.py
scripts/init/images/: BUILD.bazel  README.md
scripts/init/images/prepare/: BUILD.bazel  config.py  prepare.bzl  prepare.py
scripts/init/tf/: BUILD.bazel  README.md
scripts/init/tf/apply/: BUILD.bazel  README.md  apply.bzl  apply.py  env.py  tests.py
scripts/init/tf/poststeps/: BUILD.bazel  README.md  clean.py  poststeps.bzl
scripts/init/tf/prepare/: BUILD.bazel  README.md  copy.py  gcp.py  prepare.bzl  prepare.py  tests.py  yc.py
scripts/init/tf/secrets/: BUILD.bazel  README.md  secrets.bzl  secrets.py
scripts/init/tf/state/: BUILD.bazel  README.md  create.py  gcp.py  gcs.py  state.bzl  tests.py  ycs3.py
terraform/: BUILD  BUILD.bazel  terraform.tfvars.json.example  tf_variables.tf.tpl
tools/: extensions.bzl
tools/lint/: BUILD.bazel  fix.py  fix_all.py  lint.bzl
tools/lint/bazel/: BUILD.bazel  buildifier.bzl
tools/lint/py/: BUILD.bazel  black.bzl  black.py
tools/macros/: deb_packages.bzl  deploy.bzl  img.bzl  py_layers.bzl  tf.bzl
tools/repo_rules/: load_json_file.bzl
tools/rules/: json_gen.bzl
tools/stamping/: BUILD.bazel
tools/utils/: common.bzl  format.bzl
