module(name = "svetoch_bazel_lib")

###########
# Bazel
###########
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "zstd_toolchains")

bazel_dep(name = "rules_multirun", version = "0.10.0")

######################
# Binary tools support
######################
bazel_dep(name = "rules_bin_tools")
git_override(
    module_name = "rules_bin_tools",
    commit = "d3fefc59031fe28fcc41918f8e9df752c58c3c49",
    remote = "https://github.com/ggramal/rules_bin_tools",
)

tools = use_extension("@rules_bin_tools//tools:extensions.bzl", "tools")
tools.download(
    helm_version = "v3.18.4",
    suffix = "exec",
)
use_repo(tools, "helm_exec")

######################
# Terraform support
######################

bazel_dep(name = "rules_tf")
git_override(
    module_name = "rules_tf",
    commit = "972e20e677514021345d095f258f2e5e31d5a3c6",
    remote = "https://github.com/ggramal/rules_tf",
)

tf = use_extension("@rules_tf//tf:extensions.bzl", "tf")
tf.toolchain(
    name = "svetoch_bazel_lib_tf_executable",
    version = "1.14.4",
)
use_repo(tf, "svetoch_bazel_lib_tf_executable")

register_toolchains(
    "@svetoch_bazel_lib_tf_executable//:all",
)

load_file = use_extension("@svetoch_bazel_lib//tools:extensions.bzl", "load_file")
load_file.json(
    name = "svetoch_bazel_lib_tfvars",
    src = "//:terraform.tfvars.json.example",
    variable_name = "tfvars",
)
use_repo(load_file, "svetoch_bazel_lib_tfvars")

###################
# Container support
###################

bazel_dep(name = "rules_oci", version = "2.2.2")
bazel_dep(name = "rules_distroless", version = "0.5.1")

##################
# Python support
##################
bazel_dep(name = "aspect_rules_py", version = "1.3.2")
bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
use_repo(python, python = "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "svetoch_bazel_lib_py_deps",
    python_version = "3.11",
    requirements_lock = "@svetoch_bazel_lib//deps/py:requirements_lock_3_11.txt",
)
use_repo(pip, "svetoch_bazel_lib_py_deps")
