load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")
load("@svetoch_bazel_lib_py_deps//:requirements.bzl", "requirement")

py_lint()

py_binary(
    name = "change_yaml",
    srcs = ["change_yaml.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("click"),
        requirement("PyYAML"),
    ],
)

py_binary(
    name = "push_commit",
    srcs = ["push_commit.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("GitPython"),
    ],
)

py_binary(
    name = "cloudrun",
    srcs = ["img.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("click"),
        "@svetoch_bazel_lib//libs/py/gcp:cloudrun",
    ],
)
