load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")

py_lint()

py_binary(
    name = "prepare",
    srcs = ["prepare.py"],
    visibility = ["//visibility:public"],
)

command(
    name = "init_prepare",
    command = ":prepare",
)

command(
    name = "tf_init",
    command = "@svetoch_bazel_lib//scripts/init/tf:init",
)

command(
    name = "images_init",
    command = "@svetoch_bazel_lib//scripts/init/images:init",
)

multirun(
    name = "init",
    commands = [
        "tf_init",
        "images_init",
    ],
    visibility = ["//visibility:public"],
)
