load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@svetoch_bazel_lib_py_deps//:requirements.bzl", "requirement")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")

py_lint()

py_library(
    name = "cloudrun",
    srcs = ["cloudrun.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("google-cloud-run"),
    ],
)
