load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@rules_python//python:defs.bzl", "py_test")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")
load("@svetoch_bazel_lib_py_deps//:requirements.bzl", "requirement")

py_lint()

py_library(
    name = "settings",
    srcs = glob(
        ["*.py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        requirement("pydantic-settings"),
        requirement("pydantic"),
    ],
)

py_test(
    name = "tests",
    srcs = glob(
        ["*.py"],
    ),
    data = [
        "//:terraform.tfvars.json",
    ],
    deps = [
        requirement("pydantic-settings"),
        requirement("pydantic"),
    ],
)
