load("@aspect_rules_py//py:defs.bzl", "py_test")
load("@rules_python//python:defs.bzl", "py_binary")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")
load("@svetoch_bazel_lib_py_deps//:requirements.bzl", "requirement")

py_lint()

py_binary(
    name = "tf_variables",
    srcs = glob(
        ["*.py"],
        exclude = ["test*py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "@svetoch_bazel_lib//libs/py/settings",
        requirement("python-hcl2"),
    ],
)

py_test(
    name = "tests",
    srcs = glob(
        ["*.py"],
    ),
    deps = [
        "@svetoch_bazel_lib//libs/py/settings",
        requirement("python-hcl2"),
    ],
)
