load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@svetoch_bazel_lib//scripts/init/images/prepare:prepare.bzl", "get_prepare_args")

prepare_args = get_prepare_args()

command(
    name = "prepare",
    arguments = prepare_args,
    command = "@svetoch_bazel_lib//scripts/init/images/prepare",
)

command(
    name = "build",
    command = "@svetoch_bazel_lib//scripts/init/images/build",
)

multirun(
    name = "init",
    commands = [
        "prepare",
        "build",
    ],
    visibility = ["//visibility:public"],
)
