load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test", "py_library")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")

py_lint()

py_binary(
    name = "apply",
    srcs = [
        "apply.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@svetoch_bazel_lib//libs/py/settings",
        "@svetoch_bazel_lib//libs/py/tf",
        "@svetoch_bazel_lib//libs/py/utils",
        "@svetoch_bazel_lib//scripts/init/tf/apply:env",
    ],
)

py_library(
    name = "env",
    srcs = [
        "env.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@svetoch_bazel_lib//libs/py/helpers",
        "@svetoch_bazel_lib//libs/py/settings",
        "@svetoch_bazel_lib//libs/py/utils",
    ],
)

py_test(
    name = "tests",
    srcs = glob(
        ["*.py"],
    ),
    deps = [
        "@svetoch_bazel_lib//libs/py/helpers",
        "@svetoch_bazel_lib//libs/py/settings",
        "@svetoch_bazel_lib//libs/py/tf",
        "@svetoch_bazel_lib//libs/py/utils",
    ],
)
