load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")

py_lint()

py_binary(
    name = "prepare",
    srcs = glob(
        ["*.py"],
        exclude = [
            "test*py",
            "copy.py",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "@svetoch_bazel_lib//libs/py/gcp:api",
        "@svetoch_bazel_lib//libs/py/tf",
    ],
)

py_binary(
    name = "copy",
    srcs = [
        "copy.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@svetoch_bazel_lib//libs/py/tf",
        "@svetoch_bazel_lib//libs/py/utils",
    ],
)

py_test(
    name = "tests",
    srcs = glob(
        ["*.py"],
    ),
    deps = [
        "@svetoch_bazel_lib//libs/py/gcp:api",
        "@svetoch_bazel_lib//libs/py/tf",
    ],
)
