load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")
load("@svetoch_bazel_lib//tools/lint/py:black.bzl", "py_lint")
load("@svetoch_bazel_lib_py_deps//:requirements.bzl", "requirement")

py_lint()

py_binary(
    name = "create",
    srcs = glob(
        ["*.py"],
        exclude = ["test*py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "@svetoch_bazel_lib//libs/py/tf",
        "@svetoch_bazel_lib//libs/py/utils",
        requirement("google-cloud-storage"),
    ],
)

py_test(
    name = "tests",
    srcs = glob(
        ["*.py"],
    ),
    deps = [
        "@svetoch_bazel_lib//libs/py/tf",
        "@svetoch_bazel_lib//libs/py/utils",
        requirement("google-cloud-storage"),
    ],
)
